# riscy-aes

./: .gitignore  README.md  svls.toml  t --max-parents=0 HEAD  vivado_pid23307.str  vivado_pid59996.str
hardware/: baseline_100mhz.saif  baseline_full_power_saif.rpt  baseline_power_riscv_i_mapped.rpt  baseline_riscv_i_100mhz.saif  baseline_riscv_i_100mhz_power.rpt  move_files.sh  riscv_data_mem_0.mif  riscv_instr_mem_0.mif  saif_unmatched_100mhz.txt  saif_unmatched_riscv_i_100mhz.txt  unmatched_strip_riscv_i.txt  vivado_pid152814.str  vivado_pid9584.str
hardware/scripts/: create_project_ooc_synth.tcl  run_simulation.tcl  run_synth_impl.tcl
hardware/src/design/riscy/: cv32e40p_aes.sv  cv32e40p_aes32.sv  cv32e40p_aes32_decrypt.sv  cv32e40p_aes32_encrypt.sv  cv32e40p_aes_mem.sv  cv32e40p_alu.sv  cv32e40p_core.sv  cv32e40p_decoder.sv  cv32e40p_ex_stage.sv  cv32e40p_id_stage.sv  cv32e40p_load_store_unit.sv  riscv_wrapper.v
hardware/src/design/riscy/include/: aes_pkg.sv  (+2 more)
hardware/src/design/zynq_system/: coredata_2_bram.sv
hardware/src/simulation/: aes_core_tb.sv  aes_kat_tb.sv  aes_tb.sv  assert.svh
software/: Makefile  aes.map  aes_hardware.c  aes_hardware.ll  aes_hardware_unrolled.ll  main.c  main.ll  main_d.c  main_decrypt.c  main_decrypt_old.c  main_encrypt.c  main_encrypt_old.c  main_unrolled.ll  software_sol.c
software/bin_files/: code.coe  data.coe  move_files.sh
software/config/: rv32-standard.conf
software/loop_unroll/: CMakeLists.txt  loop_unroll.cpp
software/output/: soft.elf  soft.srec  soft_disasm.s
table_gen/: RISCVInstrInfoAES.td
